manifests/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: guestbook-frontend
  template:
    metadata:
      labels:
        app: guestbook-frontend
    spec:
      containers:
      - name: frontend
        image: gcr.io/google-samples/gb-frontend:v5
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: guestbook-frontend
spec:
  type: NodePort
  selector:
    app: guestbook-frontend
  ports:
  - port: 80
    targetPort: 80
